adding down.sql

--- a/HW5/Homework5_2/Homework5_2/Homework5_2.csproj
+++ b/HW5/Homework5_2/Homework5_2/Homework5_2.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Down.sql" />
     <Content Include="App_Data\Homeworks.mdf" />
     <Content Include="App_Data\Homeworks_log.ldf">
       <DependentUpon>Homeworks.mdf</DependentUpon>
