Changed names of .sqls for consistency

--- a/HW5/Homework5_2/Homework5_2/Homework5_2.csproj
+++ b/HW5/Homework5_2/Homework5_2/Homework5_2.csproj
@@ -143,7 +143,7 @@
     <Content Include="App_Data\Homeworks_log.ldf">
       <DependentUpon>Homeworks.mdf</DependentUpon>
     </Content>
-    <Content Include="App_Data\up.sql" />
+    <Content Include="App_Data\Up.sql" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
