--- a/HW6/Homework6/Homework6/Homework6.csproj
+++ b/HW6/Homework6/Homework6/Homework6.csproj
@@ -167,6 +167,7 @@
     <Compile Include="Models\TransactionType.cs" />
     <Compile Include="Models\VehicleTemperature.cs" />
     <Compile Include="DAL\WWIContext.cs" />
+    <Compile Include="Models\ViewModels\MoreInfoViewModel.cs" />
     <Compile Include="Models\ViewModels\StockItemViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
