User data done, started repo data w ajax

--- a/.gitignore
+++ b/.gitignore
@@ -146,6 +146,10 @@ publish/
 #*.pubxml
 *.publishproj
 
+# Ignore encrypted GitHub Key File
+/Web_deploy.config
+/HW7/Homework7/Homework7/Web_deploy.config
+
 # Microsoft Azure Web App publish settings. Comment the next line if you want to
 # checkin your Azure Web App publish settings, but sensitive information contained
 # in these scripts will be unencrypted
