--- a/HW7/Homework7/Homework7/Homework7.csproj
+++ b/HW7/Homework7/Homework7/Homework7.csproj
@@ -131,6 +131,8 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\redarrow.png" />
+    <Content Include="Content\tree.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
