--- a/HW8/Homework8/Homework8/Homework8.csproj
+++ b/HW8/Homework8/Homework8/Homework8.csproj
@@ -142,6 +142,7 @@
     <Compile Include="DAL\hw8Context.cs" />
     <Compile Include="Models\Meet.cs" />
     <Compile Include="Models\Team.cs" />
+    <Compile Include="Models\ViewModels\AthleteResultViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -193,6 +194,7 @@
     <Content Include="Views\Meets\Index.cshtml" />
     <Content Include="Views\EventAthleteResults\Create.cshtml" />
     <Content Include="Views\EventAthleteResults\Index.cshtml" />
+    <Content Include="Views\Home\StudentResult.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
