--- a/HW8/Homework8/Homework8/Homework8.csproj
+++ b/HW8/Homework8/Homework8/Homework8.csproj
@@ -143,6 +143,8 @@
     <Compile Include="Models\Meet.cs" />
     <Compile Include="Models\Team.cs" />
     <Compile Include="Models\ViewModels\AthleteResultViewModel.cs" />
+    <Compile Include="Models\ViewModels\DropDownViewModel.cs" />
+    <Compile Include="Models\ViewModels\GraphViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -173,6 +175,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\main.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -185,7 +188,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
+    <Content Include="Views\Home\Graph.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Athletes\Create.cshtml" />
