Finished hw9/deployed to Azure. Changed context file and web.config to go to Azure website. NOTE: SEE hw8Context.cs FOR INFO TO RUN LOCALLY VS ON AZURE. Currently runs on Azure.

--- a/HW8/Homework8/Homework8/Web.config
+++ b/HW8/Homework8/Homework8/Web.config
@@ -64,5 +64,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="hw8Context" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\mjkli\Documents\CS460\CS460-F19-mjklienst\HW8\Homework8\Homework8\App_Data\TrackMeets.mdf;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="hw8Context_Azure" connectionString="Server=tcp:cs460server.database.windows.net,1433;Initial Catalog=MeetTracksDBAzure;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
